test/compile_errors/err_issue181_inline_unsafe_colon.w
//! expect-error: unsafe: requires a newline

fn main:
    let x = 1
    let p = &x as *const i32
    let y = unsafe: *p
    y
